(EAI-608): upgrade embeddings model + improvements to embedded content store and pages store + query preprocessor prompt changed (#559)
* init refactor

* fix broken tests

* chatbot improvements and eval fix

* Fix build err

* fix build errs

* tests

* tests w/ retry

* upgrade mongodb-memory-server

* embedded content test pass

* fix broken tests

* remove coll name var b/c using default

* Fix test fails

* update env vars

* fix broken integration tests

* Fix broken tests

* remove test log

* fix broken tests

* fix tests

* Update packages/chatbot-server-mongodb-public/src/config.ts

* remove embeddings from logs

* remove unused type var

* implement NL feedback

--- a/.drone.yml
+++ b/.drone.yml
@@ -40,8 +40,8 @@ steps:
         from_secret: openai_endpoint
       OPENAI_API_KEY:
         from_secret: openai_api_key
-      OPENAI_EMBEDDING_DEPLOYMENT:
-        from_secret: openai_embedding_deployment
+      OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: docs-chatbot-embedding-ada-002
+      OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: text-embedding-3-small
       OPENAI_CHAT_COMPLETION_DEPLOYMENT:
         from_secret: openai_chat_completion_deployment
       DEVCENTER_CONNECTION_URI:
