--- a/packages/mongodb-rag-ingest/package.json
+++ b/packages/mongodb-rag-ingest/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-jsdoc": "^46.4.5",
     "eslint-plugin-prettier": "^4",
     "jest": "^29.5.0",
+    "mongodb-memory-server": "^10.1.2",
     "prettier": "^2",
     "release-it": "^16.1.5",
     "ts-jest": "^29.1.0",
