working discovery benchmark

--- a/packages/mongodb-rag-core/package.json
+++ b/packages/mongodb-rag-core/package.json
@@ -30,7 +30,8 @@
     "./langchain": "./build/langchain.js",
     "./mongodb": "./build/mongodb.js",
     "./openai": "./build/openai.js",
-    "./dataSources": "./build/dataSources/index.js"
+    "./dataSources": "./build/dataSources/index.js",
+    "./eval": "./build/eval/index.js"
   },
   "scripts": {
     "clean": "rm -rf build",
