--- a/packages/benchmarks/.env.example
+++ b/packages/benchmarks/.env.example
@@ -16,3 +16,5 @@ OPENAI_ENDPOINT="https://<resource_name>.openai.azure.com/"
 OPENAI_API_KEY="<api_key>"
 # Cookie must be updated daily
 MONGODB_AUTH_COOKIE="<Auth cookie from CorpSecure-protected site>"
+GCP_OPENAI_ENDPOINT="https://{LOCATION}-aiplatform.googleapis.com/v1beta1/projects/{PROJECT_ID}/locations/{LOCATION}/endpoints/openapi"
+GCP_API_KEY="SOME_API_KEY"
