--- a/packages/benchmarks/.env.example
+++ b/packages/benchmarks/.env.example
@@ -18,7 +18,7 @@ OPENAI_API_KEY="<api_key>"
 MONGODB_AUTH_COOKIE="<Auth cookie from CorpSecure-protected site>"
 GCP_OPENAI_ENDPOINT="https://{LOCATION}-aiplatform.googleapis.com/v1beta1/projects/{PROJECT_ID}/locations/{LOCATION}/endpoints/openapi"
 GCP_API_KEY="SOME_API_KEY"
-AWS_REGION="..."
+AWS_REGION="us-east-1"
 AWS_ACCESS_KEY_ID="..."
 AWS_SECRET_ACCESS_KEY="..."
 AWS_SESSION_TOKEN="note: must refresh regularly"
