--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -43,6 +43,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.705.0",
     "@supercharge/promise-pool": "^3.2.0",
     "braintrust": "^0.0.175",
     "dotenv": "^16",
