--- a/.drone.yml
+++ b/.drone.yml
@@ -493,6 +493,7 @@ steps:
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
+# ingest for coach gtm
 ---
 depends_on: ["test-all"]
 kind: pipeline
@@ -572,7 +573,7 @@ trigger:
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
-  - name: deploy-staging-ingest-mongodb-public
+  - name: deploy-staging-ingest-coach-gtm
     image: quay.io/mongodb/drone-helm:v3
     settings:
       chart: mongodb/cronjobs
