--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -44,8 +44,8 @@
     "build:dts": "tsc --project tsconfig.declarations.json",
     "build": "npm run build:component && npm run build:component:cjs && if [ \"$ENVIRONMENT\" = \"qa\" ]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
     "build:component": "npm run build:component:esm && npm run build:component:cjs && npm run build:dts",
-    "build:component:esm": "tsc --project tsconfig.build.json && VITE_MODULE_FORMAT=es vite build --config vite.config.component.js",
-    "build:component:cjs": "tsc --project tsconfig.build.json && VITE_MODULE_FORMAT=cjs vite build --config vite.config.component.js",
+    "build:component:esm": "tsc --noEmit --project tsconfig.build.json && VITE_MODULE_FORMAT=es vite build --config vite.config.component.js",
+    "build:component:cjs": "tsc --noEmit --project tsconfig.build.json && VITE_MODULE_FORMAT=cjs vite build --config vite.config.component.js",
     "build:static-site:dev": "tsc --project tsconfig.build.json && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode development",
     "build:static-site:staging": "tsc --project tsconfig.build.json && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode staging",
     "build:static-site:qa": "tsc --project tsconfig.build.json && VITE_GIT_COMMIT=$(npm run --silent env:get-git-commit) vite build --config vite.config.static-site.js --mode qa",
