--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -42,7 +42,7 @@
   },
   "scripts": {
     "build:dts": "tsc --project tsconfig.declarations.json",
-    "build": "npm run build:component && npm run build:component:cjs && if [ \"$ENVIRONMENT\" = \"qa\" ]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
+    "build": "npm run build:component && if [ \"$ENVIRONMENT\" = \"qa\" ]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
     "build:component": "npm run build:component:esm && npm run build:component:cjs && npm run build:dts",
     "build:component:esm": "tsc --project tsconfig.build.json && VITE_MODULE_FORMAT=es vite build --config vite.config.component.js",
     "build:component:cjs": "tsc --project tsconfig.build.json && VITE_MODULE_FORMAT=cjs vite build --config vite.config.component.js",
