--- a/packages/mongodb-artifact-generator/context/release-notes/migrator-releaseInfo.yaml
+++ b/packages/mongodb-artifact-generator/context/release-notes/migrator-releaseInfo.yaml
@@ -15,11 +15,11 @@ projectDescription: >-
     while transforming to the target schema
   - generate code artifacts to reduce the time required to update application code
 
-  Relational Migrator addresses common migration and data modeling challenges, 
+  Relational Migrator addresses common migration and data modeling challenges,
   de-risking an organization's transition to MongoDB while helping them take full
   advantage of the document model. Relational Migrator is therefore designed for use
   by personnel put in charge by their organisation to carry out the transition from
-  relational databases to MongoDB. 
+  relational databases to MongoDB.
 
   Relational Migrator analyzes an existing relational schema and gives recommendations
   for mapping to a new MongoDB schema. The visual interface is used to consolidate a
@@ -39,3 +39,10 @@ projectDescription: >-
   Boot JAR file that contains the compiled frontend artifacts and serves them as
   static resources. The Spring Boot application contains an embedded Tomcat server
   which also serves the REST API requests coming from the frontend.
+
+  The following is a partial list of internal dependies used by the project. Any
+  upgrades or changes to these are not user facing and should not be included in
+  external release notes:
+
+  - @sentry/react
+  - Debezium JDBC connector
