--- a/packages/mongodb-chatbot-ui/package.json
+++ b/packages/mongodb-chatbot-ui/package.json
@@ -42,7 +42,7 @@
   },
   "scripts": {
     "build:dts": "tsc --project tsconfig.declarations.json",
-    "build": "npm run build:component && npm run build:component:cjs && if [ \"$ENVIRONMENT\" = \"qa\" ]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
+    "build": "npm run build:component && if [ \"$ENVIRONMENT\" = \"qa\" ]; then npm run build:static-site:qa && echo \"qa\"; else npm run build:static-site:staging; fi",
     "build:component": "npm run build:component:esm && npm run build:component:cjs && npm run build:dts",
     "build:component:esm": "tsc --project tsconfig.build.json && VITE_MODULE_FORMAT=es vite build --config vite.config.component.js",
     "build:component:cjs": "tsc --project tsconfig.build.json && VITE_MODULE_FORMAT=cjs vite build --config vite.config.component.js",
@@ -107,7 +107,8 @@
     "remark": "^15.0.1",
     "remark-parse": "^11.0.0",
     "unified": "^11.0.4",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "^5.0.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@rollup/plugin-inject": "^5.0.3",
