--- a/packages/chatbot-server-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-server-mongodb-public/environments/staging.yml
@@ -13,11 +13,13 @@ env:
   OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4o
   OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: "docs-chatbot-embedding-ada-002"
   OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: "text-embedding-3-small"
+  BRAINTRUST_CHATBOT_TRACING_PROJECT_NAME: "chatbot-responses-staging"
 
-envSecrets:
-  MONGODB_CONNECTION_URI: docs-chatbot-staging
-  OPENAI_ENDPOINT: docs-chatbot-staging
-  OPENAI_API_KEY: docs-chatbot-staging
+  envSecrets:
+    MONGODB_CONNECTION_URI: docs-chatbot-staging
+    OPENAI_ENDPOINT: docs-chatbot-staging
+    OPENAI_API_KEY: docs-chatbot-staging
+    BRAINTRUST_TRACING_API_KEY: docs-chatbot-staging
 
 ingress:
   enabled: true
