tracing w/ LLM as a judge

--- a/packages/chatbot-server-mongodb-public/.env.example
+++ b/packages/chatbot-server-mongodb-public/.env.example
@@ -17,4 +17,4 @@ OPENAI_API_VERSION="2024-06-01"
 JUDGE_EMBEDDING_MODEL="text-embedding-3-small"
 JUDGE_LLM="gpt-4o-mini"
 BRAINTRUST_TRACING_API_KEY="<some api key>"
-BRAINTRUST_CHATBOT_TRACING_PROJECT_NAME="chatbot-responses"
+BRAINTRUST_CHATBOT_TRACING_PROJECT_NAME="chatbot-responses-dev"
