--- a/packages/chatbot-server-mongodb-public/environments/production.yml
+++ b/packages/chatbot-server-mongodb-public/environments/production.yml
@@ -13,11 +13,17 @@ env:
   OPENAI_CHAT_COMPLETION_DEPLOYMENT: gpt-4o
   OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: "docs-chatbot-embedding-ada-002"
   OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: "text-embedding-3-small"
+  JUDGE_LLM: "gpt-4o-mini"
+  JUDGE_EMBEDDING_MODEL: "text-embedding-3-small"
+  # TODO:(EAI-644) add prod tracing
+  # BRAINTRUST_CHATBOT_TRACING_PROJECT_NAME: "chatbot-responses-prod"
 
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-prod
   OPENAI_ENDPOINT: docs-chatbot-prod
   OPENAI_API_KEY: docs-chatbot-prod
+  # TODO:(EAI-644) add prod tracing
+  # BRAINTRUST_TRACING_API_KEY: docs-chatbot-prod
 
 ingress:
   enabled: true
