--- a/packages/datasets/.env.example
+++ b/packages/datasets/.env.example
@@ -2,3 +2,4 @@ OPENAI_API_KEY=<YOUR_API_KEY>
 OPENAI_DEPLOYMENT_NAME=<YOUR_DEPLOYMENT_NAME>
 OPENAI_ENDPOINT=<YOUR_ENDPOINT>
 OPENAI_GPT_4o_COMPLETION_DEPLOYMENT="<some deployment>"
+BRAINTRUST_API_KEY="<some key>"
