(EAI-625): LLM-as-a-judge evals on server messages (#593)
* add braintrust to core

* Update packages/mongodb-chatbot-server/src/routes/conversations/addMessageToConversation.ts

* working server logging instrumentation

* checkpoint

* target more recent version to use es2023

* update lib to latest

* update tracing

* lets see

* braintrust tracing in test

* no trace in test

* tracing tests

* up timeout on flaky test

* chatbot staging

* add basic LLM as a judge tracing

* tracing w/ LLM as a judge

* add judge vars to drone

* implement NL feedback

--- a/packages/chatbot-server-mongodb-public/environments/staging.yml
+++ b/packages/chatbot-server-mongodb-public/environments/staging.yml
@@ -14,6 +14,8 @@ env:
   OPENAI_VERIFIED_ANSWER_EMBEDDING_DEPLOYMENT: "docs-chatbot-embedding-ada-002"
   OPENAI_RETRIEVAL_EMBEDDING_DEPLOYMENT: "text-embedding-3-small"
   BRAINTRUST_CHATBOT_TRACING_PROJECT_NAME: "chatbot-responses-staging"
+  JUDGE_LLM: "gpt-4o-mini"
+  JUDGE_EMBEDDING_MODEL: "text-embedding-3-small"
 
 envSecrets:
   MONGODB_CONNECTION_URI: docs-chatbot-staging
