--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -36,6 +36,7 @@
     "mongodb-rag-core": "*",
     "pm2": "^5.3.0",
     "slack-block-builder": "^2.8.0",
+    "slackify-markdown": "^4.4.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.2"
   },
