--- a/packages/chatbot-server-mongodb-public/package.json
+++ b/packages/chatbot-server-mongodb-public/package.json
@@ -26,6 +26,7 @@
     "evaluate": "braintrust eval"
   },
   "dependencies": {
+    "@slack/web-api": "^7.8.0",
     "common-tags": "^1.8.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -34,6 +35,8 @@
     "mongodb-chatbot-verified-answers": "*",
     "mongodb-rag-core": "*",
     "pm2": "^5.3.0",
+    "slack-block-builder": "^2.8.0",
+    "slackify-markdown": "^4.4.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.2"
   },
