(EAI-649): Draft code example classifier type (#595)
* migrate classifier to core

* start creating docs team classifier

* configurable model

* working e2e

* fix build err

---------

Co-authored-by: Ben Perlmutter <mongodben@mongodb.com>

--- a/packages/datasets/.env.example
+++ b/packages/datasets/.env.example
@@ -1,4 +1,6 @@
 OPENAI_API_KEY=<YOUR_API_KEY>
-OPENAI_DEPLOYMENT_NAME=<YOUR_DEPLOYMENT_NAME>
+OPENAI_CHAT_COMPLETION_DEPLOYMENT="gpt-4o-mini"
+OPENAI_CHAT_COMPLETION_MODEL_VERSION="placeholder...must include but value doesn't matter"
 OPENAI_ENDPOINT=<YOUR_ENDPOINT>
-OPENAI_GPT_4o_COMPLETION_DEPLOYMENT="<some deployment>"
+OPENAI_API_VERSION="2024-06-01"
+BRAINTRUST_API_KEY="<some key>"
