--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -30,13 +30,16 @@
     "countUsableExamples": "npm run build && node ./build/bin/countUsableExamples.js",
     "classifyCodeExamplesForUsefulness": "npm run build && node ./build/bin/classifyCodeExamplesForUsefulness.js",
     "convertCodeExamplePromptYamlToCsvUsefulOnly": "npm run build && node ./build/bin/convertCodeExamplePromptYamlToCsvUsefulOnly.js",
-    "countExamplesByLength": "npm run build && node ./build/bin/countExamplesByLength.js"
+    "countExamplesByLength": "npm run build && node ./build/bin/countExamplesByLength.js",
+    "summarizeAtlasVectorSearchDocs": "npm run build && node ./build/bin/summarizeAtlasVectorSearchDocs.js"
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.12",
     "@supercharge/promise-pool": "^3.2.0",
     "@types/unist": "^3.0.2",
     "csv": "^6.3.9",
+    "gpt-tokenizer": "^2.8.1",
+    "langchain": "^0.3.14",
     "llamaindex": "^0.2.9",
     "lodash.samplesize": "^4.2.0",
     "mongodb-rag-core": "*",
