--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -31,7 +31,8 @@
     "classifyCodeExamplesForUsefulness": "npm run build && node ./build/bin/classifyCodeExamplesForUsefulness.js",
     "convertCodeExamplePromptYamlToCsvUsefulOnly": "npm run build && node ./build/bin/convertCodeExamplePromptYamlToCsvUsefulOnly.js",
     "countExamplesByLength": "npm run build && node ./build/bin/countExamplesByLength.js",
-    "summarizeAtlasVectorSearchDocs": "npm run build && node ./build/bin/summarizeAtlasVectorSearchDocs.js"
+    "summarizeAtlasVectorSearchDocs": "npm run build && node ./build/bin/summarizeAtlasVectorSearchDocs.js",
+    "summarizeKotlinDriverDocs": "npm run build && node ./build/bin/summarizeKotlinDriverDocs.js"
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.12",
