--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,16 @@ trigger:
       - package.json
 
 steps:
+  - name: install_dependencies
+    image: node:18
+    commands:
+      - apt-get update
+      - apt-get install -y wget gnupg
+      - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+      - sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+      - apt-get update
+      - apt-get install -y google-chrome-stable
+
   - name: test
     image: node:18
     commands:
