--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^1.7.0",
-    "lerna": "^5.6.2"
+    "lerna": "^5.6.2",
+    "tsup": "^8.3.6"
   },
   "dependencies": {
     "zod": "^3.24.1"
