--- a/packages/release-notes-generator/tsconfig.json
+++ b/packages/release-notes-generator/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["ES2022"],
-    "target": "ES2022",
-    "outDir": "./build",
-    "resolveJsonModule": true,
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "esModuleInterop": true,
+    "strict": true,
+    "outDir": "dist",
+    "skipLibCheck": true
   },
-  "include": ["./src/**/*.ts", "./src/**/*.json"],
+  "include": ["src/**/*"]
 }
