--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -2,7 +2,6 @@
   "name": "datasets",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "engines": {
     "node": ">=18",
     "npm": ">=8"
@@ -12,7 +11,7 @@
     "build": "tsc -b",
     "watch": "tsc -b -w",
     "release": "release-it",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js --forceExit",
     "lint": "eslint ./src --ext ts --report-unused-disable-directives",
     "lint:fix": "npm run lint -- --fix && prettier ./src --check --write",
     "extractCodeExamples": "npm run build && node ./build/bin/extractCodeExamples.js",
@@ -53,6 +52,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/lodash.samplesize": "^4.2.9"
+    "@types/lodash.samplesize": "^4.2.9",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.3"
   }
 }
