--- a/packages/datasets/.env.example
+++ b/packages/datasets/.env.example
@@ -4,3 +4,7 @@ OPENAI_CHAT_COMPLETION_MODEL_VERSION="placeholder...must include but value doesn
 OPENAI_ENDPOINT=<YOUR_ENDPOINT>
 OPENAI_API_VERSION="2024-06-01"
 BRAINTRUST_API_KEY="<some key>"
+HUGGINGFACE_ACCESS_TOKEN="hf_..."
+HUGGINGFACE_DOCS_CONTENT_REPO="someuser/some-repo"
+MONGODB_CONNECTION_URI="..."
+MONGODB_DATABASE_NAME="docs-chatbot-dev"
