--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -38,6 +38,7 @@
     "@supercharge/promise-pool": "^3.2.0",
     "@types/unist": "^3.0.2",
     "csv": "^6.3.9",
+    "lang-map": "^0.4.0",
     "llamaindex": "^0.2.9",
     "lodash.samplesize": "^4.2.0",
     "mongodb-rag-core": "*",
