--- a/packages/datasets/package.json
+++ b/packages/datasets/package.json
@@ -30,7 +30,8 @@
     "classifyCodeExamplesForUsefulness": "npm run build && node ./build/bin/classifyCodeExamplesForUsefulness.js",
     "convertCodeExamplePromptYamlToCsvUsefulOnly": "npm run build && node ./build/bin/convertCodeExamplePromptYamlToCsvUsefulOnly.js",
     "countExamplesByLength": "npm run build && node ./build/bin/countExamplesByLength.js",
-    "uploadContentDatasetToHuggingFace": "npm run build && node ./build/bin/huggingFace/uploadContentDatasetToHuggingFace.js"
+    "uploadContentDatasetToHuggingFace": "npm run build && node ./build/bin/huggingFace/uploadContentDatasetToHuggingFace.js",
+    "uploadCodeExampleDatasetToHuggingFace": "npm run build && node ./build/bin/huggingFace/uploadCodeExampleDatasetToHuggingFace.js"
   },
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.12",
