--- a/.drone.yml
+++ b/.drone.yml
@@ -28,9 +28,9 @@ steps:
     image: node:18
     commands:
       - npm ci
-      - npm run build
-      - npm run lint
-      - npm run test
+      - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
+      # - npm run lint
+      - npm run test -- --scope=ingest-mongodb-public
 
     environment:
       PORT: 3000
