--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -30,6 +30,8 @@
     "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
+    "csv-parser": "^3.2.0",
+    "chatbot-server-mongodb-public": "*",
     "eslint": "^8",
     "eslint-config-prettier": "^8",
     "eslint-plugin-jsdoc": "^46.4.5",
