--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,7 @@ steps:
     image: node:18
     commands:
       - npm ci
+      - which chromium
       - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
       # - npm run lint
       - npm run test -- --scope=ingest-mongodb-public
@@ -411,7 +412,7 @@ name: staging-build-ingest-mongodb-public
 
 trigger:
   branch:
-    - EAI-639
+    - main
   event:
     - push
   paths:
@@ -476,7 +477,7 @@ trigger:
       - package.json
 
   branch:
-    - EAI-639
+    - main
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
