wip: puppeteer in cron

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ steps:
     image: node:18
     commands:
       - npm ci
-      - which chromium
+      # - which chromium
       - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
       # - npm run lint
       - npm run test -- --scope=ingest-mongodb-public
