--- a/.drone.yml
+++ b/.drone.yml
@@ -18,8 +18,7 @@ steps:
     image: node:18
     commands:
       - npm ci
-      - npx playwright install-deps chromium
-      # - which chromium
+      - npx playwright install-deps chromium # Required to run web scraping in docker
       - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
       # - npm run lint
       - npm run test -- --scope=ingest-mongodb-public
