--- a/packages/release-notes-generator/package.json
+++ b/packages/release-notes-generator/package.json
@@ -35,7 +35,12 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
+    "@octokit/rest": "^21.1.1",
     "@supercharge/promise-pool": "^3.2.0",
-    "common-tags": "^1.8.2"
+    "common-tags": "^1.8.2",
+    "dotenv": "^16.4.7",
+    "jira-client": "^8.2.2",
+    "mongodb-rag-core": "^0.5.0",
+    "zod": "^3.24.2"
   }
 }
