wip: test playwright in cron

--- a/.drone.yml
+++ b/.drone.yml
@@ -414,7 +414,7 @@ name: staging-build-ingest-mongodb-public
 
 trigger:
   branch:
-    - EAI-639-playwright
+    - EAI-639
   event:
     - push
   paths:
@@ -479,7 +479,7 @@ trigger:
       - package.json
 
   branch:
-    - EAI-639-playwright
+    - EAI-639
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
