wip: test playwright in cron - adjust k8s limits

--- a/packages/ingest-mongodb-public/environments/staging.yml
+++ b/packages/ingest-mongodb-public/environments/staging.yml
@@ -24,12 +24,12 @@ cronJobs:
     resources:
       # guaranteed amount of resources
       requests:
-        cpu: 100m
+        cpu: 1
         memory: 2Gi
       # maximum allowed resources
       limits:
-        cpu: 500m
-        memory: 5Gi
+        cpu: 2
+        memory: 4Gi
     backoffLimit: 3
   - name: ingest-content-test
     schedule: "0 8 * * *" # every day at 8am UTC (3AM EST)
