wip: test playwright in cron - skip testing step

--- a/.drone.yml
+++ b/.drone.yml
@@ -17,13 +17,14 @@ steps:
   - name: test
     image: node:18
     commands:
-      - npm ci
+      # - npm ci
       # - npx playwright install-deps chromium # Required to run web scraping in docker
       # - node node_modules/puppeteer/install.js
-      - npx playwright install --with-deps
-      - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
+      # - npx playwright install --with-deps
+      # - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
       # - npm run lint
-      - npm run test -- --scope=ingest-mongodb-public
+      # - npm run test -- --scope=ingest-mongodb-public
+      - echo "Skip Testing"
 
     environment:
       PORT: 3000
