--- a/.drone.yml
+++ b/.drone.yml
@@ -17,13 +17,11 @@ steps:
   - name: test
     image: node:18
     commands:
-      # - npm ci
-      # - npx playwright install-deps chromium # Required to run web scraping in docker
-      # - node node_modules/puppeteer/install.js
-      # - npx playwright install --with-deps
-      # - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
-      # - npm run lint
-      # - npm run test -- --scope=ingest-mongodb-public
+      - npm ci
+      - npx playwright install chromium
+      - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
+      - npm run lint
+      - npm run test -- --scope=ingest-mongodb-public -t WebDataSource
       - echo "Skip Testing"
 
     environment:
