--- a/.drone.yml
+++ b/.drone.yml
@@ -18,10 +18,10 @@ steps:
     image: node:18
     commands:
       - npm ci
-      - npx playwright install chromium
+      - npx playwright install chromium --with-deps
       - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
       - npm run lint
-      - npm run test -- --scope=ingest-mongodb-public -t WebDataSource
+      - npm run test -- --scope=ingest-mongodb-public -- --testNamePattern="WebDataSource"
       - echo "Skip Testing"
 
     environment:
