--- a/.drone.yml
+++ b/.drone.yml
@@ -17,11 +17,11 @@ steps:
   - name: test
     image: node:18
     commands:
-      - npm ci
-      - npx playwright install chromium --with-deps
-      - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
-      - npm run lint
-      - npm run test -- --scope=ingest-mongodb-public -- --testNamePattern="WebDataSource"
+      # - npm ci
+      # - npx playwright install chromium --with-deps
+      # - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
+      # - npm run lint
+      # - npm run test -- --scope=ingest-mongodb-public -- --testNamePattern="WebDataSource"
       - echo "Skip Testing"
 
     environment:
@@ -413,7 +413,7 @@ name: staging-build-ingest-mongodb-public
 
 trigger:
   branch:
-    - EAI-639
+    - EAI-639_ben
   event:
     - push
   paths:
@@ -478,7 +478,7 @@ trigger:
       - package.json
 
   branch:
-    - EAI-639
+    - EAI-639_ben
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
