--- a/.drone.yml
+++ b/.drone.yml
@@ -18,12 +18,10 @@ steps:
     image: node:18
     commands:
       # - npm ci
-      # - npx playwright install-deps chromium # Required to run web scraping in docker
-      # - node node_modules/puppeteer/install.js
-      # - npx playwright install --with-deps
+      # - npx playwright install chromium --with-deps
       # - npm run build -- --scope='{mongodb-rag-core,mongodb-rag-ingest,ingest-mongodb-public}'
       # - npm run lint
-      # - npm run test -- --scope=ingest-mongodb-public
+      # - npm run test -- --scope=ingest-mongodb-public -- --testNamePattern="WebDataSource"
       - echo "Skip Testing"
 
     environment:
